# cloakroom

./: .env.example  .gitignore  HOW-IT-WORKS.md  README.md  pyproject.toml  vercel.json
api/: index.py  requirements.txt
examples/: curl_examples.sh  prachan_icici_demo.py
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
src/cloakroom/: __init__.py  config.py  models.py  pipeline.py
src/cloakroom/audit/: __init__.py  logger.py
src/cloakroom/client/: __init__.py  python_client.py
src/cloakroom/detection/: __init__.py  aws_comprehend_detector.py  base.py  presidio_detector.py  regex_detector.py  taxonomy.py
src/cloakroom/llm/: __init__.py  base.py  bedrock_llm.py  mock_llm.py  ollama_llm.py
src/cloakroom/masking/: __init__.py  strategies.py  tokenizer.py  unmasker.py
src/cloakroom/service/: __init__.py  app.py
src/cloakroom/vault/: __init__.py  aws_vault.py  base.py  crypto.py  memory_vault.py  redis_vault.py
tests/: test_aws_adapters.py  test_detection.py  test_llm.py  test_pipeline.py  test_presidio.py  test_service.py  test_strategies.py  test_tokenizer.py  test_unmasker.py  test_vault.py
web/: .env.production  .gitignore  DESIGN.md  PRODUCT.md  README.md  REPORTS.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/footer/: SealFooter.tsx
web/src/components/hero/: Hero.tsx  MaskMorph.tsx  VaultScene.tsx
web/src/hooks/: useLenis.ts
web/src/lib/: api.ts  cloak.ts  gemini.ts  mock.ts  sample.ts  sound.ts  types.ts
(+11 files in other folders)
