[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloakroom"
version = "0.1.0"
description = "Cloud-agnostic PII/PHI/PFI masking middleware for LLM calls (detect -> mask -> LLM -> unmask)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.5",
    "cryptography>=42.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
presidio = ["presidio-analyzer>=2.2", "spacy>=3.7"]
redis = ["redis>=5.0"]
aws = ["boto3>=1.34"]
dev = ["pytest>=8.0"]

[project.scripts]
cloakroom-serve = "cloakroom.service.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
